--- a/src/app/scss/components/_alerts.scss
+++ b/src/app/scss/components/_alerts.scss
@@ -14,6 +14,7 @@
   z-index: 1000;
   top: 20px;
   left: 15px;
+  margin-right: 15px;
   padding-right: 15px;
   -webkit-box-shadow: 0 0 6px 1px rgba(158,156,158,1);
   -moz-box-shadow: 0 0 6px 1px rgba(158,156,158,1);
