Fix VIRTA instructions link text.

--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -118,6 +118,9 @@
                    class="h3 text-dark">{{i18n.content.esitayta.etsijulkaisu.title[lang]}}
             </label>
             <p data-ng-bind="i18n.content.esitayta.etsijulkaisu.info[lang]"></p>
+            <p class="text-secondary">VIRTA-palvelun nimihaussa on tiettyjä rajoituksia hakusanojen suhteen:
+                <a class="font-weight-bold" href="https://wiki.eduuni.fi/pages/viewpage.action?pageId=171984994" target="_blank">Tarkemmat ohjeet VIRTA-hakuun<i class="fa fa-external-link pl-x"></i></a>
+            </p>
 
         </div>
     </div>
