--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -1,5 +1,10 @@
 <div class="alert alert-default text-center text-secondary" data-ng-if="justus.julkaisu.id">
-  <span class="text-2xl text-dark">{{i18n.content.alert.text[lang]}}  {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</span>
+  <p class="text-xl text-dark">{{i18n.content.alert.text[lang]}}  {{ justus.julkaisu.id }}:</p>
+  <p class="text-xl text-dark font-weight-bold" >{{ justus.julkaisu.julkaisunnimi }}</p>
+  <div class="text-center mb-0">
+    <button class="btn btn-gray" 
+            data-ng-click="cancelAndAndStartOver()">Sulje tallentamatta</button>
+  </div>
 </div>
 
 <div class="row">
