--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -4,6 +4,9 @@
   font-family: $font-family-secondary;
 }
 
+button[disabled] {
+  cursor: not-allowed;
+}
 
 .btn-primary {
   border-color: $brand-primary;
@@ -17,6 +20,15 @@
       background: $brand-primary;
       color: $brand-white;
     }
+  }
+}
+
+.btn-gray {
+  background: #f5f5f5;
+  border: 1px solid #ccc;
+  &:hover {
+    background: #999;
+    border: 1px solid #999;
   }
 }
 
