--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -29,6 +29,7 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/panels";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
 //@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Components w/ JavaScript
