--- a/src/app/scss/components/_icons.scss
+++ b/src/app/scss/components/_icons.scss
@@ -11,3 +11,15 @@
   font-size: 10px;
   vertical-align: top;
 }
+
+.active, .inactive {
+  cursor: pointer;
+}
+
+i.active {
+  color: $brand-primary;
+}
+
+i.inactive {
+  color: #333;
+}
