Show orcid field for all organizations.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -283,7 +283,7 @@
               </div>
             </div>
 
-            <div data-ng-if="isFieldVisible('alayksikko')" class="row form-group">
+            <div data-ng-if="isFieldVisible('orcid')" class="row form-group">
               <div data-ng-class="['orcidGroup' + $index]" class="col-xs-12 col-sm-6"
                    validate-organisaatiotekijat-directive validate="validateState" field="orcid"
                    value="justus.organisaatiotekija[$index].orcid">
