Add missing button types.

--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -2,7 +2,8 @@
   <p class="text-xl text-dark">{{i18n.content.alert.text[lang]}}  {{ justus.julkaisu.id }}:</p>
   <p class="text-xl text-dark font-weight-bold" >{{ justus.julkaisu.julkaisunnimi }}</p>
   <div class="text-center mb-0">
-    <button class="btn btn-gray" 
+    <button class="btn btn-gray"
+            type="button"
             data-ng-click="cancelAndAndStartOver()">Sulje tallentamatta</button>
   </div>
 </div>
