--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -7,8 +7,9 @@
 
   </div>
   <div class="col-xs-4" data-ng-if="justus.julkaisu.id">
-    <button class="btn btn-gray pull-right" 
-            data-ng-controller="TallennusController" 
+    <button class="btn btn-gray pull-right"
+            type="button"
+            data-ng-controller="TallennusController"
             data-ng-click="cancelAndReturnToPublicationListing()">Sulje tallentamatta</button>
   </div>
 </div>
