--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -4,7 +4,8 @@
         <p class="text-xl text-dark">{{i18n.content.alert.text[lang]}}  {{ justus.julkaisu.id }}:</p>
         <p class="text-xl text-dark font-weight-bold" >{{ justus.julkaisu.julkaisunnimi }}</p>
         <div class="text-center mb-0">
-          <button class="btn btn-gray" 
+          <button class="btn btn-gray"
+                  type="button"
                   data-ng-click="cancelAndAndStartOver()">Sulje tallentamatta</button>
         </div>
       </div>
@@ -431,7 +432,7 @@
         <div class="col-md-4">
             <button
                     class="btn btn-lg btn-block btn-info"
-                    type="submit"
+                    type="button"
                     data-ng-click="useVaihe(3)">
                 {{i18n.content.tietojensyotto.palaa[lang]}}
             </button>
