--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -403,6 +403,8 @@
                        data-uib-popover="{{i18n.content.rinnakkaistallennusform.rinnakkaistallennettumuualle.form.rinnakkaistallennetunversionverkkoosoite.tooltip[lang]}}"
                        data-ng-show="i18n.content.rinnakkaistallennusform.rinnakkaistallennettumuualle.form.rinnakkaistallennetunversionverkkoosoite.tooltip[lang]">
                     </i>
+                    <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
+                    <span class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
                 </div>
                 <div class="col-md-8 col-xs-12">
                     <input id="verkkoosoite"
