Minor style changes. Change self-archived publication text in Verify and save stage.

--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -112,15 +112,15 @@
                 <fieldset>
                     <legend class="col-md-4">
                         <label class="control-label"
-                               data-ng-bind="i18n.content.form.julkaisurinnakkaistallennettu[lang]">
+                               data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.rinnakkaistallennus[lang]">
                         </label>
                         <i class="fa fa-info-circle justus-info"
                            data-popover-trigger="'outsideClick'"
                            data-popover-is-open="isOpenRinnakkaistallenne"
                            data-ng-mouseenter="isOpenRinnakkaistallenne = true"
                            data-popover-placement="right"
-                           data-uib-popover="{{i18n.content.form.julkaisurinnakkaistallennettu.tooltip[lang]}}"
-                           data-ng-show="i18n.content.form.julkaisurinnakkaistallennettu.tooltip[lang]">
+                           data-uib-popover="{{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.rinnakkaistallennus.tooltip[lang]}}"
+                           data-ng-show="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.rinnakkaistallennus.tooltip[lang]">
                         </i>
                     </legend>
                     <div class="col-md-8 justus-data">
@@ -131,14 +131,14 @@
                                        data-ng-model="justus.julkaisu.julkaisurinnakkaistallennettu"
                                        value="1">
                                 <label for="rinnakkaistallenne" class="control-label">
-                                    {{i18n.content.form.julkaisurinnakkaistallennettu['1'][lang]}}
+                                    {{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.rinnakkaistallennus['1'][lang]}}
                                 </label>
                                 <input id="eirinnakkaistallenne"
                                        type="radio"
                                        data-ng-model="justus.julkaisu.julkaisurinnakkaistallennettu"
                                        value="0">
                                 <label for="eirinnakkaistallenne" class="control-label">
-                                    {{i18n.content.form.julkaisurinnakkaistallennettu['0'][lang]}}
+                                    {{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.rinnakkaistallennus['0'][lang]}}
                                 </label>
                             </div>
                         </div>
