Add two new fields, julkaisumaksu and julkaisumaksuvuosi.

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -294,6 +294,24 @@
       <td>{{ i18n.content.form.avoinsaatavuus[justus.julkaisu.avoinsaatavuus][lang] }}</td>
     </tr>
 
+    <!-- Julkaisumaksu -->
+    <tr>
+      <th class="condensed-25 font-weight-bold">{{ i18n.content.form.julkaisumaksu[lang] }}</th>
+      <td>{{ justus.julkaisu.julkaisumaksu}}</td>
+    </tr>
+
+    <!-- Julkaisumaksuvuosi -->
+    <tr>
+      <th class="condensed-25 font-weight-bold">{{ i18n.content.form.julkaisumaksuvuosi[lang] }}</th>
+      <td>{{ justus.julkaisu.julkaisumaksuvuosi}}</td>
+    </tr>
+
+    <!-- Lisätieto kenttä -->
+    <tr>
+      <th class="condensed-25 font-weight-bold">{{ i18n.content.form.lisatieto[lang] }}</th>
+      <td>{{ justus.julkaisu.lisatieto }}</td>
+    </tr>
+
     <!-- Julkaisu rinnakkaistallennettu -->
     <tr>
       <th class="condensed-25 font-weight-bold">{{ i18n.content.form.julkaisurinnakkaistallennettu[lang] }}</th>
@@ -304,12 +322,6 @@
     <tr>
       <th class="condensed-25 font-weight-bold">{{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettumuualle.form.rinnakkaistallennetunversionverkkoosoite[lang]}}</th>
       <td>{{ justus.julkaisu.rinnakkaistallennetunversionverkkoosoite }}</td>
-    </tr>
-
-    <!-- Lisätieto kenttä -->
-    <tr>
-      <th class="condensed-25 font-weight-bold">{{ i18n.content.form.lisatieto[lang] }}</th>
-      <td>{{ justus.julkaisu.lisatieto }}</td>
     </tr>
 
     <!-- Tiedoston syöttöön liittyvä data -->
