--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1827,6 +1827,74 @@
        </div>
      </div>
 
+     <!-- Kenttä: Julkaisumaksu -->
+     <div class="row form-group"
+          id="julkaisumaksuGroup"
+          data-ng-if="isFieldVisible('julkaisumaksu')">
+       <div class="col-sm-4 col-xs-12">
+         <label for="julkaisumaksu" class="control-label"
+                data-ng-bind="i18n.content.form.julkaisumaksu[lang]"></label>
+         <i class="fa fa-info-circle justus-info"
+            data-popover-trigger="'outsideClick'"
+            data-popover-is-open="popoverIsOpen"
+            data-ng-mouseenter="popoverIsOpen = true"
+            data-popover-placement="right"
+            data-uib-popover="{{i18n.content.form.julkaisumaksu.tooltip[lang]}}"
+            data-ng-show="i18n.content.form.julkaisumaksu.tooltip[lang]">
+         </i>
+         <i data-ng-if="isFieldRequired('julkaisumaksu')" class="fa fa-asterisk required-star"
+            aria-hidden="true"></i>
+         <span data-ng-if="isFieldRequired('julkaisumaksu')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
+       </div>
+       <div class="col-sm-8 col-xs-12 justus-data">
+         <div class="row">
+           <div class="col-xs-12">
+             <input id="julkaisumaksu"
+                    name="julkaisumaksu"
+                    type="text"
+                    class="form-control"
+                    data-ng-model="justus.julkaisu.julkaisumaksu"
+                    placeholder="{{ i18n.content.form.julkaisumaksu.picktip[lang] }}"
+                    data-ng-keydown="resetValidationError('julkaisumaksu')">
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <!-- Kenttä: Julkaisumaksu -->
+     <div class="row form-group"
+          id="julkaisumaksuvuosiGroup"
+          data-ng-if="isFieldVisible('julkaisumaksuvuosi')">
+       <div class="col-sm-4 col-xs-12">
+         <label for="julkaisumaksuvuosi" class="control-label"
+                data-ng-bind="i18n.content.form.julkaisumaksuvuosi[lang]"></label>
+         <i class="fa fa-info-circle justus-info"
+            data-popover-trigger="'outsideClick'"
+            data-popover-is-open="popoverIsOpen"
+            data-ng-mouseenter="popoverIsOpen = true"
+            data-popover-placement="right"
+            data-uib-popover="{{i18n.content.form.julkaisumaksuvuosi.tooltip[lang]}}"
+            data-ng-show="i18n.content.form.julkaisumaksuvuosi.tooltip[lang]">
+         </i>
+         <i data-ng-if="isFieldRequired('julkaisumaksuvuosi')" class="fa fa-asterisk required-star"
+            aria-hidden="true"></i>
+         <span data-ng-if="isFieldRequired('julkaisumaksuvuosi')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
+       </div>
+       <div class="col-sm-8 col-xs-12 justus-data">
+         <div class="row">
+           <div class="col-xs-12">
+             <input id="julkaisumaksuvuosi"
+                    name="julkaisumaksuvuosi"
+                    type="text"
+                    class="form-control"
+                    data-ng-model="justus.julkaisu.julkaisumaksuvuosi"
+                    placeholder="{{ i18n.content.form.julkaisumaksuvuosi.picktip[lang] }}"
+                    data-ng-keydown="resetValidationError('julkaisumaksuvuosi')">
+           </div>
+         </div>
+       </div>
+     </div>
+
      <!-- Kenttä: Lisätieto -->
      <div class="row form-group" data-ng-if="isFieldVisible('lisatieto')" id="lisatietoGroup">
        <div class="col-sm-4 col-xs-12">
