Refactor footer, add maintenance break info.

--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -167,6 +167,9 @@
 .font-weight-bold {
   font-weight: bold;
 }
+ .letter-spacing-1 {
+   letter-spacing: 1px;
+ }
 
 .bg-white {
   background-color: #fff !important;
