--- a/src/app/js/shared/initialize-justus-modal.html
+++ b/src/app/js/shared/initialize-justus-modal.html
@@ -6,5 +6,5 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default pull-left" data-ng-click="cancel()">Peruuta</button>
-    <button type="button" class="btn btn-primary" data-ng-click="ok()">Jatka</button>
+    <button type="button" class="btn btn-primary" data-ng-click="ok()">Poistu sivulta</button>
 </div>
