--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -34,7 +34,7 @@
             data-ng-if="user.role === 'admin' || user.role === 'owner'"
             ng-csv="getCsvExportFile()"
             lazy-load="true"
-            csv-header="csvExportHeader"
+            csv-header="getHeaders()"
             filename="julkaisut.csv"
             field-separator=";"
             quote-strings="true"
